--- a/gccsite/gcc/templates/gcc/index/projects.html
+++ b/gccsite/gcc/templates/gcc/index/projects.html
@@ -1,19 +1,19 @@
 {% load i18n %}
 
 <div class="col-sm-4">
-    <div class="tl-block">
-      <div class="row">
-        <div class="col-xs-2 col-sm-12">
-            <h1><i class="fa fa-gamepad" aria-hidden="true"></i></h1>
-        </div>
-        <div class="col-xs-10 col-sm-12">
-          <div class="desc">
-              <p>
-                {% blocktrans %}
-                  Finish by creating your very own project.</p>
-                {% endblocktrans %}
-          </div>
+  <div class="tl-block">
+    <div class="row">
+      <div class="col-xs-2 col-sm-12">
+        <h1><i class="fa fa-gamepad" aria-hidden="true"></i></h1>
+      </div>
+      <div class="col-xs-10 col-sm-12">
+        <div class="desc">
+          <p>
+            {% blocktrans %} Finish by creating your very own project.
+          </p>
+          {% endblocktrans %}
         </div>
       </div>
+    </div>
   </div>
 </div>
