--- a/gccsite/gcc/templates/gcc/mails/accept.body.text.html
+++ b/gccsite/gcc/templates/gcc/mails/accept.body.text.html
@@ -1,36 +1,18 @@
-Bonjour {{applicant.user.first_name}} {{applicant.user.last_name}},
-
-Après étude des candidatures, nous avons le plaisir de t’informer que tu as été
-sélectionnée pour participer au stage « Girls Can Code! » à {{event.center}},
-du {{event.event_start|date:"l j F"}} au {{event.event_end|date:"l j F"}}!
-
-Tu peux maintenant confirmer ta venue au stage depuis le site:
-{{confirm_url}}
-
-Nous te donnons donc rendez-vous le {{event.event_start|date:"l j F"}} à 11h à
-{{event.center.name}}:
-
-{{event.center.address}}
-{{event.center.postal_code}}, {{event.center.city}}
-{{event.center.country}}
-
-N’oublies pas que l’hébergement n’est pas pris en charge par l’association
-Prologin. Les petits-déjeuners, déjeuners sont en revanche pris en charge ainsi
-que le dîner à la fin du stage.
-
+Bonjour {{applicant.user.first_name}} {{applicant.user.last_name}}, Après étude
+des candidatures, nous avons le plaisir de t’informer que tu as été sélectionnée
+pour participer au stage « Girls Can Code! » à {{event.center}}, du
+{{event.event_start|date:"l j F"}} au {{event.event_end|date:"l j F"}}! Tu peux
+maintenant confirmer ta venue au stage depuis le site: {{confirm_url}} Nous te
+donnons donc rendez-vous le {{event.event_start|date:"l j F"}} à 11h à
+{{event.center.name}}: {{event.center.address}} {{event.center.postal_code}},
+{{event.center.city}} {{event.center.country}} N’oublies pas que l’hébergement
+n’est pas pris en charge par l’association Prologin. Les petits-déjeuners,
+déjeuners sont en revanche pris en charge ainsi que le dîner à la fin du stage.
 Tu trouveras, en pièce jointe de ce mail, des documents à remplir et à ramener
-le premier jour ainsi que le planning des activités.
-
-En plus de la fiche sanitaire à apporter, si tu as des allergies ou
-restrictions alimentaire, il est important que tu nous le précise pour que nous
-fassions en sorte que tout se passe bien !
-
-En attendant le stage tu peux aller sur http://france-ioi.org/ pour découvrir,
-t’entraîner et t’améliorer avant le stage.
-
-Si tu as la moindre question n’hésite pas à nous écrire à info@prologin.org.
-
-Nous avons hâte de te voir au stage,
-
---
-L'équipe Prologin
+le premier jour ainsi que le planning des activités. En plus de la fiche
+sanitaire à apporter, si tu as des allergies ou restrictions alimentaire, il est
+important que tu nous le précise pour que nous fassions en sorte que tout se
+passe bien ! En attendant le stage tu peux aller sur http://france-ioi.org/ pour
+découvrir, t’entraîner et t’améliorer avant le stage. Si tu as la moindre
+question n’hésite pas à nous écrire à info@prologin.org. Nous avons hâte de te
+voir au stage, -- L'équipe Prologin
