--- a/gccsite/gcc/templates/gcc/mails/subscribe.body.text.html
+++ b/gccsite/gcc/templates/gcc/mails/subscribe.body.text.html
@@ -1,27 +1,7 @@
-{% spaceless %}
-{% autoescape off %}
-{% load i18n utils %}
-
-{% get_setting 'PROLOGIN_CONTACT_MAIL' as contactmail %}
-{% get_setting 'SITE_BASE_URL' as baseurl %}
-
-{% blocktrans %}
-Hi!
-
-Your subscription to the mailing list of GCC! has been completed.
-
-If you wish to unsubscribe from this mailing list you can use the following
-link:
-
-{{ baseurl }}{{ unsubscribe_url }}
-
-Should you have any question, please contact us by sending an email at
-{{ contactmail }}.
-
--- 
-The Prologin staff
-
-{% endblocktrans %}
-{% endautoescape %}
-{% endspaceless %}
-
+{% spaceless %} {% autoescape off %} {% load i18n utils %} {% get_setting
+'PROLOGIN_CONTACT_MAIL' as contactmail %} {% get_setting 'SITE_BASE_URL' as
+baseurl %} {% blocktrans %} Hi! Your subscription to the mailing list of GCC!
+has been completed. If you wish to unsubscribe from this mailing list you can
+use the following link: {{ baseurl }}{{ unsubscribe_url }} Should you have any
+question, please contact us by sending an email at {{ contactmail }}. -- The
+Prologin staff {% endblocktrans %} {% endautoescape %} {% endspaceless %}
