--- a/gccsite/gcc/templates/gcc/mails/subscribe.subject.html
+++ b/gccsite/gcc/templates/gcc/mails/subscribe.subject.html
@@ -1,3 +1,1 @@
-{% load i18n %}
-
-{% trans "Subscription the newsletter of GCC!" %}
+{% load i18n %} {% trans "Subscription the newsletter of GCC!" %}
