--- a/gccsite/gccsite/templates/404.html
+++ b/gccsite/gccsite/templates/404.html
@@ -1,11 +1,13 @@
-{% extends "_error_base.html" %}
-{% load i18n %}
-
-{% block breadcrumbs %}{% with 404 as number %}{{ block.super }}{% endwith %}{% endblock %}
-{% block title       %}{% with 404 as number %}{{ block.super }}{% endwith %}{% endblock %}
-
-{% block explanation %}
-<p>{% trans "The resource you asked for does not longer exist, or never has." %}</p>
+{% extends "_error_base.html" %} {% load i18n %} {% block breadcrumbs %}{% with
+404 as number %}{{ block.super }}{% endwith %}{% endblock %} {% block title %}{%
+with 404 as number %}{{ block.super }}{% endwith %}{% endblock %} {% block
+explanation %}
+<p>
+  {% trans "The resource you asked for does not longer exist, or never has." %}
+</p>
 {# TODO: the said search engine #}
-<p>{% trans "You could use our search engine to find the content you are looking for." %}</p>
+<p>
+  {% trans "You could use our search engine to find the content you are looking
+  for." %}
+</p>
 {% endblock %}
