--- a/gccsite/users/templates/users/unsubscribe_confirm.html
+++ b/gccsite/users/templates/users/unsubscribe_confirm.html
@@ -1,13 +1,10 @@
-{% extends "gcc/base.html" %}
-{% load i18n staticfiles %}
-{% load bootstrap %}
-
-{% block title %}{% trans "Unsubscribe" %}{% endblock %}
-
-{% block content %}
-  <h1>{% trans "Unsubscribe" %}</h1>
-  <p><strong>{{ unsubscribe_user.email }}</strong>
-  {% blocktrans %}has been unsubscribed and will receive no further e-mails
-  from Prologin.{% endblocktrans %}</p>
+{% extends "gcc/base.html" %} {% load i18n staticfiles %} {% load bootstrap %}
+{% block title %}{% trans "Unsubscribe" %}{% endblock %} {% block content %}
+<h1>{% trans "Unsubscribe" %}</h1>
+<p>
+  <strong>{{ unsubscribe_user.email }}</strong> {% blocktrans %}has been
+  unsubscribed and will receive no further e-mails from Prologin.{%
+  endblocktrans %}
+</p>
 
 {% endblock %}
