--- a/gccsite/gcc/static/gcc/css/grid.css
+++ b/gccsite/gcc/static/gcc/css/grid.css
@@ -8,42 +8,34 @@
 }
 
 @media screen and (max-width: 1680px) {
-
     .container {
         width: 70em;
     }
-
 }
 
 @media screen and (max-width: 1280px) {
-
     .container {
         width: calc(100% - 100px);
     }
-
 }
 
 @media screen and (max-width: 980px) {
-
     .container {
         width: calc(100% - 100px);
     }
-
 }
 
 @media screen and (max-width: 736px) {
-
     .container {
         width: calc(100% - 40px);
     }
-
 }
 
 .row {
     display: grid;
 }
 
-.row>* {
+.row > * {
     overflow: auto;
     box-sizing: border-box;
 }
@@ -65,7 +57,8 @@
 }
 
 @media screen and (max-width: 35rem) {
-    .row.irr_10rem_1fr, .row.irr_1fr_10rem {
+    .row.irr_10rem_1fr,
+    .row.irr_1fr_10rem {
         grid-template-columns: 1fr;
     }
 }
