--- a/gccsite/gcc/static/gcc/css/homepage.css
+++ b/gccsite/gcc/static/gcc/css/homepage.css
@@ -2,217 +2,221 @@
  * SPDX-License-Identifier: GPL-3.0+
  */
 .home-jumbo {
-  margin-top: -20px;
-  background: var(--primary);
-  color: #fefefe;
-  padding: 0 0 3em;
-  position: relative;
+    margin-top: -20px;
+    background: var(--primary);
+    color: #fefefe;
+    padding: 0 0 3em;
+    position: relative;
 }
 
 .home-jumbo:after {
-  content: "";
-  width: 100%;
-  height: 50px;
-  position: absolute;
-  bottom: 0;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.15) 100%);
+    content: "";
+    width: 100%;
+    height: 50px;
+    position: absolute;
+    bottom: 0;
+    background: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 0) 0%,
+        rgba(0, 0, 0, 0.15) 100%
+    );
 }
 
 .home-jumbo h1 {
-  margin-top: 0;
+    margin-top: 0;
 }
 
 @media screen and (max-width: 768px) {
-  .home-jumbo {
-    padding: 0 0 1em;
-  }
+    .home-jumbo {
+        padding: 0 0 1em;
+    }
 
-  .home-jumbo .htl {
-    margin-top: 2em;
-  }
+    .home-jumbo .htl {
+        margin-top: 2em;
+    }
 
-  .home-jumbo .line {
-    display: none;
-  }
+    .home-jumbo .line {
+        display: none;
+    }
 
-  .home-jumbo .tl-block h4 {
-    margin: 0 !important;
-  }
+    .home-jumbo .tl-block h4 {
+        margin: 0 !important;
+    }
 
-  .home-jumbo .tl-block h4:after {
-    background-position: right center !important;
-  }
+    .home-jumbo .tl-block h4:after {
+        background-position: right center !important;
+    }
 
-  .home-jumbo .tl-block .date {
-    position: relative;
-    display: block;
-  }
+    .home-jumbo .tl-block .date {
+        position: relative;
+        display: block;
+    }
 
-  .home-jumbo .tl-block:not(.last) .date:after {
-    content: "\f103";
-    font-family: 'FontAwesome';
-    font-size: 1.7em;
-    width: 100%;
-    text-align: right;
-    left: 0;
-    right: 0;
-    position: absolute;
-    padding: 0.7em 20px 0 0;
-  }
+    .home-jumbo .tl-block:not(.last) .date:after {
+        content: "\f103";
+        font-family: "FontAwesome";
+        font-size: 1.7em;
+        width: 100%;
+        text-align: right;
+        left: 0;
+        right: 0;
+        position: absolute;
+        padding: 0.7em 20px 0 0;
+    }
 
-  .home-jumbo .tl-block {
-    text-align: right !important;
-    margin: 0 0 1em 0 !important;
-    min-height: 6.5em;
-  }
+    .home-jumbo .tl-block {
+        text-align: right !important;
+        margin: 0 0 1em 0 !important;
+        min-height: 6.5em;
+    }
 
-  .home-jumbo .tl-block .desc {
-    margin: 0 !important;
-  }
+    .home-jumbo .tl-block .desc {
+        margin: 0 !important;
+    }
 
-  .home-jumbo .tl-block .desc:before {
-    /* arrow left */
-    top: 1em !important;
-    left: -9px !important;
-    margin-left: -9px !important;
-    border-top: 9px solid transparent !important;
-    border-bottom: 9px solid transparent !important;
-    border-right: 9px solid var(--primary-light) !important;
-  }
+    .home-jumbo .tl-block .desc:before {
+        /* arrow left */
+        top: 1em !important;
+        left: -9px !important;
+        margin-left: -9px !important;
+        border-top: 9px solid transparent !important;
+        border-bottom: 9px solid transparent !important;
+        border-right: 9px solid var(--primary-light) !important;
+    }
 }
 
 .home-jumbo .line {
-  border-bottom: 4px solid var(--primary-light);
-  position: absolute;
-  top: 0;
-  width: 100%;
-  margin-top: 57px;
+    border-bottom: 4px solid var(--primary-light);
+    position: absolute;
+    top: 0;
+    width: 100%;
+    margin-top: 57px;
 }
 
 .home-jumbo .line > i {
-  position: absolute;
-  top: -10px;
-  margin-left: -27px;
-  font-size: 27px;
-  padding: 0 6px;
-  color: var(--primary-light);
+    position: absolute;
+    top: -10px;
+    margin-left: -27px;
+    font-size: 27px;
+    padding: 0 6px;
+    color: var(--primary-light);
 }
 
 .home-jumbo .tl-block {
-  text-align: center;
-  color: #ffffff;
+    text-align: center;
+    color: #ffffff;
 }
 
 .home-jumbo .tl-block.active,
 .home-jumbo .tl-block.active .desc {
-  color: white;
+    color: white;
 }
 
 .home-jumbo .tl-block p {
-  font-size: 1.2em;
+    font-size: 1.2em;
 }
 
 .home-jumbo .tl-block p:last-child {
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
 
 .home-jumbo .tl-block .desc .signin {
-  margin: 0.5em 0 0;
+    margin: 0.5em 0 0;
 }
 
 .home-jumbo .tl-block .desc:before {
-  /* arrow top */
-  content: "";
-  top: -9px;
-  left: 50%;
-  width: 0;
-  height: 0;
-  margin-left: -9px;
-  border-left: 9px solid transparent;
-  border-right: 9px solid transparent;
-  border-bottom: 9px solid var(--primary-light);
-  position: absolute;
+    /* arrow top */
+    content: "";
+    top: -9px;
+    left: 50%;
+    width: 0;
+    height: 0;
+    margin-left: -9px;
+    border-left: 9px solid transparent;
+    border-right: 9px solid transparent;
+    border-bottom: 9px solid var(--primary-light);
+    position: absolute;
 }
 
 .home-jumbo .tl-block .desc {
-  position: relative;
-  text-align: left;
-  border-radius: 3px;
-  background: var(--primary-light);
-  color: #efefef;
-  padding: 1em;
-  font-size: 0.92em;
-  margin: 1em 0 0;
-  min-height: 6em;
+    position: relative;
+    text-align: left;
+    border-radius: 3px;
+    background: var(--primary-light);
+    color: #efefef;
+    padding: 1em;
+    font-size: 0.92em;
+    margin: 1em 0 0;
+    min-height: 6em;
 }
 
 .home-jumbo .tl-block .desc a:not(.btn) {
-  color: inherit;
-  text-decoration: underline;
+    color: inherit;
+    text-decoration: underline;
 }
 
 .home-jumbo .tl-block .desc .btn {
-  font-size: inherit;
+    font-size: inherit;
 }
 
 .home-jumbo .tl-block .desc .dates-link a {
-  color: inherit;
+    color: inherit;
 }
 
 .home-jumbo .tl-block h4 {
-  font-size: 1.4em;
-  margin-bottom: 0;
+    font-size: 1.4em;
+    margin-bottom: 0;
 }
 
 .home-jumbo .tl-block h4:after {
-  content: "";
-  display: block;
-  width: 100%;
-  height: 40px;
-  margin: 4px 0 2px;
-  z-index: 1;
-  background-repeat: no-repeat;
-  background-position: 50%;
-  background-size: 40px 40px;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 40px;
+    margin: 4px 0 2px;
+    z-index: 1;
+    background-repeat: no-repeat;
+    background-position: 50%;
+    background-size: 40px 40px;
 }
 
 @media screen and (min-width: 768px) {
-  /* default is too big */
-  .home-jumbo h1 {
-    font-size: 3.2em;
-  }
+    /* default is too big */
+    .home-jumbo h1 {
+        font-size: 3.2em;
+    }
 }
 
 .hide-no-active {
-  display: none;
+    display: none;
 }
 
 .active .hide-no-active {
-  display: block;
+    display: block;
 }
 
 .checklist {
-  margin: 0.5em 0 0;
-  padding: 0.7em 1em;
-  background: #fff;
-  border-radius: 3px;
-  color: #333;
+    margin: 0.5em 0 0;
+    padding: 0.7em 1em;
+    background: #fff;
+    border-radius: 3px;
+    color: #333;
 }
 
 .checklist > li > a,
 .checklist > li > a:visited {
-  text-decoration: none;
-  color: inherit;
+    text-decoration: none;
+    color: inherit;
 }
 
 .checklist > li > a > i {
-  vertical-align: middle;
-  padding-right: 0.3em;
+    vertical-align: middle;
+    padding-right: 0.3em;
 }
 
 .semifinal-dates {
-  cursor: pointer;
-  text-decoration: none !important;
+    cursor: pointer;
+    text-decoration: none !important;
 }
 
 .up-comming td {
