--- a/gccsite/gcc/templates/gcc/application/form.html
+++ b/gccsite/gcc/templates/gcc/application/form.html
@@ -1,42 +1,38 @@
-{% extends "gcc/base.html" %}
-{% load bootstrap %}
-{% load static %}
-{% load i18n %}
-
-{% block title %}{% trans "GCC! − Application" %}{% endblock %}
-
-{% block content %}
+{% extends "gcc/base.html" %} {% load bootstrap %} {% load static %} {% load
+i18n %} {% block title %}{% trans "GCC! − Application" %}{% endblock %} {% block
+content %}
 <section class="wrapper">
-<div class="container">
+  <div class="container">
     {% if not applicant.has_complete_application %}
     <div class="alert alert-warning" role="alert">
-        {% trans "You are missing some key information, you won't be able to validate your application !" %}
+      {% trans "You are missing some key information, you won't be able to
+      validate your application !" %}
     </div>
     {% endif %}
     <h2>{% trans "Application Form" %}</h2>
     <form method="post" class="form-horizontal">
-      {% csrf_token %}
-      {{ form|bootstrap_horizontal:'col-sm-3' }}
+      {% csrf_token %} {{ form|bootstrap_horizontal:'col-sm-3' }}
       <section class="application_form">
-          <p>{% trans "I consent to the processing of my data by Prologin."%}</p>
+        <p>{% trans "I consent to the processing of my data by Prologin."%}</p>
       </section>
-      <input class="btn btn-lg btn-primary btn-block" type="submit" value="{%trans "Validate and select my wishes" %}">
+      <input class="btn btn-lg btn-primary btn-block" type="submit"
+      value="{%trans "Validate and select my wishes" %}">
     </form>
     <section class="application_form">
-        <p>
-          {% url 'gcc:privacy' as url_privacy %}
-          {% blocktrans with url=url_privacy %} The GCC! summer camps are
-          managed by the Prologin association, acting as Data Controller.
-          Answers collected by this form allow us to prepare the summer camps:
-          content customization, dietary constraints, etc.<br>
-          To learn more about your data management and your rights, please
-          <a href="{{url}}">see our dedicated page</a>. {% endblocktrans %}
-        </p>
+      <p>
+        {% url 'gcc:privacy' as url_privacy %} {% blocktrans with
+        url=url_privacy %} The GCC! summer camps are managed by the Prologin
+        association, acting as Data Controller. Answers collected by this form
+        allow us to prepare the summer camps: content customization, dietary
+        constraints, etc.<br />
+        To learn more about your data management and your rights, please
+        <a href="{{url}}">see our dedicated page</a>. {% endblocktrans %}
+      </p>
     </section>
     <section>
       {% blocktrans %} (*) This field will be required to validate your
       application. {% endblocktrans%}
     </section>
-</div>
+  </div>
 </section>
 {% endblock %}
