--- a/gccsite/gcc/templates/gcc/index/free.html
+++ b/gccsite/gcc/templates/gcc/index/free.html
@@ -1,20 +1,19 @@
 {% load i18n %}
 
 <div class="col-sm-4">
-    <div class="tl-block">
-      <div class="row">
-        <div class="col-xs-2 col-sm-12">
-            <h1><i class="fa fa-eur" aria-hidden="true"></i></h1>
-        </div>
-        <div class="col-xs-10 col-sm-12">
-          <div class="desc">
-            <p>
-              {% blocktrans %}
-                Free summer camp organized by student volunteers!
-              {% endblocktrans %}
-            </p>
-          </div>
+  <div class="tl-block">
+    <div class="row">
+      <div class="col-xs-2 col-sm-12">
+        <h1><i class="fa fa-eur" aria-hidden="true"></i></h1>
+      </div>
+      <div class="col-xs-10 col-sm-12">
+        <div class="desc">
+          <p>
+            {% blocktrans %} Free summer camp organized by student volunteers!
+            {% endblocktrans %}
+          </p>
         </div>
       </div>
+    </div>
   </div>
 </div>
