--- a/gccsite/gcc/templates/gcc/main-footer.html
+++ b/gccsite/gcc/templates/gcc/main-footer.html
@@ -1,27 +1,38 @@
-{% load i18n %}
-{% load utils %}
-{% load navigation rules %}
+{% load i18n %} {% load utils %} {% load navigation rules %}
 
 <div class="row">
   <div class="col-md-4">
     <h3>{% trans "Girls Can Code!" %}</h3>
     <ul class="nav">
-        <li><a href="{% url 'gcc:index' %}">{% trans 'Home' %}</a></li>
-        <li class="{% active '^/gcc/resources/' %}"><a href="{% url 'gcc:resources' %}">{% trans 'Ressources' %}</a></li>
-        <li class="{% active '^/gcc/editions/' %}"><a href="{% url 'gcc:editions' %}">{% trans 'Past editions' %}</a></li>
-        <li class="{% active '^/gcc/privacy/' %}"><a href="{% url 'gcc:privacy' %}">{% trans 'Privacy' %}</a></li>
+      <li><a href="{% url 'gcc:index' %}">{% trans 'Home' %}</a></li>
+      <li class="{% active '^/gcc/resources/' %}">
+        <a href="{% url 'gcc:resources' %}">{% trans 'Ressources' %}</a>
+      </li>
+      <li class="{% active '^/gcc/editions/' %}">
+        <a href="{% url 'gcc:editions' %}">{% trans 'Past editions' %}</a>
+      </li>
+      <li class="{% active '^/gcc/privacy/' %}">
+        <a href="{% url 'gcc:privacy' %}">{% trans 'Privacy' %}</a>
+      </li>
     </ul>
-
   </div>
   <div class="col-md-4">
     {# social shit #}
-    <a href="https://www.facebook.com/stagegirlscancode" title="{% trans 'Girls Can Code! on Facebook' %}" class="social">
+    <a
+      href="https://www.facebook.com/stagegirlscancode"
+      title="{% trans 'Girls Can Code! on Facebook' %}"
+      class="social"
+    >
       <span class="fa-stack fa-lg">
         <i class="fa fa-square-o fa-stack-2x fa-inverse"></i>
         <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
       </span>
     </a>
-    <a href="https://www.twitter.com/prologin" title="{% trans 'Prologin on Twitter' %}" class="social">
+    <a
+      href="https://www.twitter.com/prologin"
+      title="{% trans 'Prologin on Twitter' %}"
+      class="social"
+    >
       <span class="fa-stack fa-lg">
         <i class="fa fa-square-o fa-stack-2x fa-inverse"></i>
         <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -31,21 +42,43 @@
   <div class="col-md-4">
     <h3>{% trans "Change locale" %} <i class=" fa fa-globe"></i></h3>
     {% get_current_language as LANGUAGE_CODE %}
-    <form action="{% url 'set_language' %}" method="post" id="change-lang-form" class="form-inline">
-      {% csrf_token %}
-      {# <input name="next" type="hidden" value="{{ redirect_to }}"/> #}
-      <select name="language" id="set-language" class="form-control" onchange="$('#change-lang-form').submit();">
-        {% get_available_languages as LANGUAGES %}
-        {% get_language_info_list for LANGUAGES as languages %}
-        {% for language in languages %}
-          <option value="{{ language.code }}" selected="{% if language.code == LANGUAGE_CODE %}selected{% endif %}">{{ language.name_local.title }}</option>
+    <form
+      action="{% url 'set_language' %}"
+      method="post"
+      id="change-lang-form"
+      class="form-inline"
+    >
+      {% csrf_token %} {#
+      <input name="next" type="hidden" value="{{ redirect_to }}" /> #}
+      <select
+        name="language"
+        id="set-language"
+        class="form-control"
+        onchange="$('#change-lang-form').submit();"
+      >
+        {% get_available_languages as LANGUAGES %} {% get_language_info_list for
+        LANGUAGES as languages %} {% for language in languages %}
+        <option
+          value="{{ language.code }}"
+          selected="{% if language.code == LANGUAGE_CODE %}selected{% endif %}"
+          >{{ language.name_local.title }}</option
+        >
         {% endfor %}
       </select>
-      <noscript><input type="submit" class="btn btn-default" value="{% trans "Apply" %}"/></noscript>
-      {% if request.user.is_authenticated and LANGUAGE_CODE != request.user.preferred_locale %}
-        {% url 'users:edit' request.user.pk as user_edit_url %}
-        <p><small class="text-muted">{% blocktrans with url=user_edit_url %}Save your
-preferred locale in your <a href="{{ url }}#id_preferred_locale">user settings</a>.{% endblocktrans %}</small></p>
+      <noscript
+        ><input type="submit" class="btn btn-default" value="{% trans "Apply"
+        %}"/></noscript
+      >
+      {% if request.user.is_authenticated and LANGUAGE_CODE !=
+      request.user.preferred_locale %} {% url 'users:edit' request.user.pk as
+      user_edit_url %}
+      <p>
+        <small class="text-muted"
+          >{% blocktrans with url=user_edit_url %}Save your preferred locale in
+          your <a href="{{ url }}#id_preferred_locale">user settings</a>.{%
+          endblocktrans %}</small
+        >
+      </p>
       {% endif %}
     </form>
   </div>
