--- a/gccsite/gcc/templates/gcc/main-menu.html
+++ b/gccsite/gcc/templates/gcc/main-menu.html
@@ -1,37 +1,78 @@
-{% load i18n %}
-{% load navigation rules %}
+{% load i18n %} {% load navigation rules %}
 
 <ul class="nav navbar-nav pull-right">
-    <li><a href="{% url 'gcc:index' %}">{% trans 'Home' %}</a></li>
-    <li class="{% active '^/gcc/resources/' %}"><a href="{% url 'gcc:resources' %}">{% trans 'Ressources' %}</a></li>
-    <li class="{% active '^/gcc/editions/' %}"><a href="{% url 'gcc:editions' %}">{% trans 'Past editions' %}</a></li>
-    {% if request.user.is_staff %}
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-star"></i> Admin <span class="caret"></span></a>
-        <ul class="dropdown-menu dropdown-menu-right" role="menu">
-          <li><a href="{% url 'admin:index' %}">{% trans "Django administration" %}</a></li>
-          <li class="divider"></li>
-          <li><a href="{% url 'gcc:application_review_index' %}"><i class="fa fa-fw fa-wrench"></i> {% trans "Review Candidates" %}</a></li>
-        </ul>
+  <li><a href="{% url 'gcc:index' %}">{% trans 'Home' %}</a></li>
+  <li class="{% active '^/gcc/resources/' %}">
+    <a href="{% url 'gcc:resources' %}">{% trans 'Ressources' %}</a>
+  </li>
+  <li class="{% active '^/gcc/editions/' %}">
+    <a href="{% url 'gcc:editions' %}">{% trans 'Past editions' %}</a>
+  </li>
+  {% if request.user.is_staff %}
+  <li class="dropdown">
+    <a
+      href="#"
+      class="dropdown-toggle"
+      data-toggle="dropdown"
+      role="button"
+      aria-expanded="false"
+      ><i class="fa fa-star"></i> Admin <span class="caret"></span
+    ></a>
+    <ul class="dropdown-menu dropdown-menu-right" role="menu">
+      <li>
+        <a href="{% url 'admin:index' %}"
+          >{% trans "Django administration" %}</a
+        >
       </li>
-    {% endif%}
-    <li class="sep"><a>&nbsp;</a></li>
-    {% if not user.is_authenticated %}
-      <li><a href="{% url 'proloauth_client:autologin' %}">{% trans 'Sign in with Prologin' %}</a></li>
-    {% else %}
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-user"></i> {{ user.username }} <span class="caret"></span></a>
-        <ul class="dropdown-menu dropdown-menu-right" role="menu">
-          <li><a href="{% url 'users:profile' user.id %}"><i class="fa fa-user"></i> {% trans 'My profile' %}</a></li>
-          <li><a href="{% url 'users:edit' user.id %}"><i class="fa fa-cog"></i> {% trans 'Profile & options' %}</a></li>
-          <li><a href="{% url 'gcc:application_summary' user.id %}"><i class="fa fa-pencil-alt"></i>{% trans 'My applications' %}</a></li>
-          <li>
-              <form method="post" action="{% url 'users:logout' %}">
-              {% csrf_token %}
-              <button type="submit">{% trans 'Sign out' %}</button>
-            </form>
-          </li>
-        </ul>
+      <li class="divider"></li>
+      <li>
+        <a href="{% url 'gcc:application_review_index' %}"
+          ><i class="fa fa-fw fa-wrench"></i> {% trans "Review Candidates" %}</a
+        >
       </li>
-    {% endif %}
+    </ul>
+  </li>
+  {% endif%}
+  <li class="sep"><a>&nbsp;</a></li>
+  {% if not user.is_authenticated %}
+  <li>
+    <a href="{% url 'proloauth_client:autologin' %}"
+      >{% trans 'Sign in with Prologin' %}</a
+    >
+  </li>
+  {% else %}
+  <li class="dropdown">
+    <a
+      href="#"
+      class="dropdown-toggle"
+      data-toggle="dropdown"
+      role="button"
+      aria-expanded="false"
+      ><i class="fa fa-user"></i> {{ user.username }} <span class="caret"></span
+    ></a>
+    <ul class="dropdown-menu dropdown-menu-right" role="menu">
+      <li>
+        <a href="{% url 'users:profile' user.id %}"
+          ><i class="fa fa-user"></i> {% trans 'My profile' %}</a
+        >
+      </li>
+      <li>
+        <a href="{% url 'users:edit' user.id %}"
+          ><i class="fa fa-cog"></i> {% trans 'Profile & options' %}</a
+        >
+      </li>
+      <li>
+        <a href="{% url 'gcc:application_summary' user.id %}"
+          ><i class="fa fa-pencil-alt"></i>{% trans 'My applications' %}</a
+        >
+      </li>
+      <li>
+        <form method="post" action="{% url 'users:logout' %}">
+          {% csrf_token %}
+          <button type="submit">{% trans 'Sign out' %}</button>
+        </form>
+      </li>
+    </ul>
+  </li>
+  {% endif %}
 </ul>
