--- a/gccsite/gcc/templates/gcc/registration_widget.html
+++ b/gccsite/gcc/templates/gcc/registration_widget.html
@@ -1,6 +1,4 @@
-{% load i18n %}
-
-{% block content %}
+{% load i18n %} {% block content %}
 <section class="up-comming">
   <h2>{% trans "Summer camps open for registration" %}</h2>
   <table class="table">
@@ -9,20 +7,29 @@
       <tr>
         <td>
           <strong>{{ event.center }}</strong>,
-          <em> {% blocktrans with event.event_start|date:"DATE_FORMAT" as start and event.event_end|date:"DATE_FORMAT" as end %}
-              from the {{ start }} to the {{ end }}
-              {% endblocktrans %}
+          <em>
+            {% blocktrans with event.event_start|date:"DATE_FORMAT" as start and
+            event.event_end|date:"DATE_FORMAT" as end %} from the {{ start }} to
+            the {{ end }} {% endblocktrans %}
           </em>
         </td>
       </tr>
-    {% endfor %}
+      {% endfor %}
     </tbody>
   </table>
   <p>
     {% if user.is_authenticated %}
-      <a href="/application/form/{{last_edition}}" class="btn btn-primary btn-lg btn-block">{% trans 'Apply' %}</a>
+    <a
+      href="/application/form/{{last_edition}}"
+      class="btn btn-primary btn-lg btn-block"
+      >{% trans 'Apply' %}</a
+    >
     {% else %}
-      <a href="{% url 'proloauth_client:autologin' %}" class="btn btn-primary btn-lg btn-block">{% trans 'Sign in and apply' %}</a>
+    <a
+      href="{% url 'proloauth_client:autologin' %}"
+      class="btn btn-primary btn-lg btn-block"
+      >{% trans 'Sign in and apply' %}</a
+    >
     {% endif %}
   </p>
 </section>
