--- a/gccsite/gccsite/templates/_error_base.html
+++ b/gccsite/gccsite/templates/_error_base.html
@@ -1,21 +1,17 @@
-{% extends "gcc/base.html" %}
-{% load i18n %}
-{% load django_bootstrap_breadcrumbs %}
+{% extends "gcc/base.html" %} {% load i18n %} {% load
+django_bootstrap_breadcrumbs %} {% block breadcrumbs %} {{ block.super }} {%
+breadcrumb_for "" %} {% blocktrans %}Error {{ number }}{% endblocktrans %} {%
+endbreadcrumb_for %} {% endblock breadcrumbs %} {% block content %}
 
-{% block breadcrumbs %}
-  {{ block.super }}
-  {% breadcrumb_for "" %}
-    {% blocktrans %}Error {{ number }}{% endblocktrans %}
-  {% endbreadcrumb_for %}
-{% endblock breadcrumbs %}
+<h1>
+  {% block title %}{% blocktrans %}Error {{ number }}{% endblocktrans %}{%
+  endblock %}
+</h1>
 
-{% block content %}
-
-<h1>{% block title %}{% blocktrans %}Error {{ number }}{% endblocktrans %}{% endblock %}</h1>
-
-{% block explanation %}{% endblock %}
-
-{% url 'home' as url %}
-<p>{% blocktrans %}You can go back to the <a href="{{url}}">home page</a>.{% endblocktrans %}</p>
+{% block explanation %}{% endblock %} {% url 'home' as url %}
+<p>
+  {% blocktrans %}You can go back to the <a href="{{url}}">home page</a>.{%
+  endblocktrans %}
+</p>
 
 {% endblock %}
