--- a/gccsite/gccsite/templates/prologin/messages.html
+++ b/gccsite/gccsite/templates/prologin/messages.html
@@ -1,8 +1,5 @@
-{% load i18n %}
-
-{% for message in messages %}
-
-{% if 'modal' in message.extra_tags %}
+{% load i18n %} {% for message in messages %} {% if 'modal' in
+message.extra_tags %}
 <div class="modal fade" tabindex="-1" role="dialog" data-show="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -10,32 +7,52 @@
         {{ message|safe }}
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Close" %}</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">
+          {% trans "Close" %}
+        </button>
       </div>
     </div>
   </div>
 </div>
 
-{% else %}
-
-{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+{% else %} {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
 <div class="alert alert-dismissable alert-danger">
-  <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+  <button type="button" class="close" data-dismiss="alert" aria-hidden="true">
+    &times;
+  </button>
   <i class="fa fa-times-circle"></i>
-{% elif message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}
-<div class="alert alert-dismissable alert-warning">
-  <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-  <i class="fa fa-exclamation-triangle"></i>
-{% elif message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
-<div class="alert alert-dismissable alert-success">
-  <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-  <i class="fa fa-check-circle"></i>
-{% else %}
-<div class="alert alert-dismissable alert-info">
-  <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-  <i class="fa fa-info-circle"></i>
-{% endif %}
-  <div>{{ message|safe }}</div>
+  {% elif message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}
+  <div class="alert alert-dismissable alert-warning">
+    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">
+      &times;
+    </button>
+    <i class="fa fa-exclamation-triangle"></i>
+    {% elif message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+    <div class="alert alert-dismissable alert-success">
+      <button
+        type="button"
+        class="close"
+        data-dismiss="alert"
+        aria-hidden="true"
+      >
+        &times;
+      </button>
+      <i class="fa fa-check-circle"></i>
+      {% else %}
+      <div class="alert alert-dismissable alert-info">
+        <button
+          type="button"
+          class="close"
+          data-dismiss="alert"
+          aria-hidden="true"
+        >
+          &times;
+        </button>
+        <i class="fa fa-info-circle"></i>
+        {% endif %}
+        <div>{{ message|safe }}</div>
+      </div>
+      {% endif %} {% endfor %}
+    </div>
+  </div>
 </div>
-{% endif %}
-{% endfor %}
