--- a/gccsite/news/templates/zinnia/tags/pagination.html
+++ b/gccsite/news/templates/zinnia/tags/pagination.html
@@ -4,61 +4,68 @@
   <li class="disabled">
     <span>
       <span aria-hidden="true">
-        {% blocktrans with current_page=page.number total_page=page.paginator.num_pages %}Page {{ current_page }} of {{ total_page }}{% endblocktrans %}
+        {% blocktrans with current_page=page.number
+        total_page=page.paginator.num_pages %}Page {{ current_page }} of {{
+        total_page }}{% endblocktrans %}
       </span>
     </span>
   </li>
 
   {% if page.has_previous %}
   <li class="page previous">
-    <a href="?page={{ page.previous_page_number }}{{ GET_string }}"
-       title="{% trans 'More recent entries' %}">&laquo;</a>
+    <a
+      href="?page={{ page.previous_page_number }}{{ GET_string }}"
+      title="{% trans 'More recent entries' %}"
+      >&laquo;</a
+    >
   </li>
-  {% endif %}
-
-  {% for page_number in begin %}
+  {% endif %} {% for page_number in begin %}
   <li class="page{% ifequal page.number page_number %} active{% endifequal %}">
     {% ifequal page.number page_number %}
     <a href="#">{{ page_number }}</a>
     {% else %}
-    <a href="?page={{ page_number }}{{ GET_string }}"
-       title="{% trans 'Entries page' %} {{ page_number }}">{{ page_number }}</a>
+    <a
+      href="?page={{ page_number }}{{ GET_string }}"
+      title="{% trans 'Entries page' %} {{ page_number }}"
+      >{{ page_number }}</a
+    >
     {% endifequal%}
   </li>
-  {% endfor %}
-
-  {% if middle %}
+  {% endfor %} {% if middle %}
   <li class="page disabled"><span>&hellip;</span></li>
   {% for page_number in middle %}
   <li class="page{% ifequal page.number page_number %} active{% endifequal %}">
     {% ifequal page.number page_number %}
     <a href="#">{{ page_number }}</a>
     {% else %}
-    <a href="?page={{ page_number }}{{ GET_string }}"
-       title="{% trans 'Entries page' %} {{ page_number }}">{{ page_number }}</a>
+    <a
+      href="?page={{ page_number }}{{ GET_string }}"
+      title="{% trans 'Entries page' %} {{ page_number }}"
+      >{{ page_number }}</a
+    >
     {% endifequal%}
   </li>
-  {% endfor %}
-  {% endif %}
-
-  {% if end %}
+  {% endfor %} {% endif %} {% if end %}
   <li class="page disabled"><span>&hellip;</span></li>
   {% for page_number in end %}
   <li class="page{% ifequal page.number page_number %} active{% endifequal %}">
     {% ifequal page.number page_number %}
     <a href="#">{{ page_number }}</a>
     {% else %}
-    <a href="?page={{ page_number }}{{ GET_string }}"
-       title="{% trans 'Entries page' %} {{ page_number }}">{{ page_number }}</a>
+    <a
+      href="?page={{ page_number }}{{ GET_string }}"
+      title="{% trans 'Entries page' %} {{ page_number }}"
+      >{{ page_number }}</a
+    >
     {% endifequal%}
   </li>
-  {% endfor %}
-  {% endif %}
-
-  {% if page.has_next %}
+  {% endfor %} {% endif %} {% if page.has_next %}
   <li class="page next">
-    <a href="?page={{ page.next_page_number }}{{ GET_string }}"
-       title="{% trans 'Older entries' %}">&raquo;</a>
+    <a
+      href="?page={{ page.next_page_number }}{{ GET_string }}"
+      title="{% trans 'Older entries' %}"
+      >&raquo;</a
+    >
   </li>
   {% endif %}
 </ul>
