--- a/gccsite/users/templates/registration/password_reset_confirm.html
+++ b/gccsite/users/templates/registration/password_reset_confirm.html
@@ -1,30 +1,26 @@
-{% extends "gcc/base.html" %}
-{% load i18n staticfiles %}
-{% load bootstrap django_bootstrap_breadcrumbs %}
+{% extends "gcc/base.html" %} {% load i18n staticfiles %} {% load bootstrap
+django_bootstrap_breadcrumbs %} {% block breadcrumbs %} {{ block.super }} {%
+breadcrumb_for "" %}{% trans "Members" %}{% endbreadcrumb_for %} {%
+breadcrumb_for "" %}{% trans "Password reset confirmation" %}{%
+endbreadcrumb_for %} {% endblock breadcrumbs %} {% block title %}{% trans
+"Password reset confirmation" %}{% endblock %} {% block content %} {# From
+django.auth.contrib.auth template registration/password_reset_confirm.html #}
+<h1>{% trans "Password reset confirmation" %}</h1>
 
-{% block breadcrumbs %}
-  {{ block.super }}
-  {% breadcrumb_for "" %}{% trans "Members" %}{% endbreadcrumb_for %}
-  {% breadcrumb_for "" %}{% trans "Password reset confirmation" %}{% endbreadcrumb_for %}
-{% endblock breadcrumbs %}
+<p>
+  {% trans "Please enter your new password twice so we can verify you typed it
+  in correctly." %}
+</p>
 
-{% block title %}{% trans "Password reset confirmation" %}{% endblock %}
+<form method="POST" class="form-horizontal">
+  {% csrf_token %} {{ form|bootstrap_horizontal }}
 
-{% block content %}
-  {# From django.auth.contrib.auth template registration/password_reset_confirm.html #}
-  <h1>{% trans "Password reset confirmation" %}</h1>
-
-  <p>{% trans "Please enter your new password twice so we can verify you typed it in correctly." %}</p>
-
-  <form method="POST" class="form-horizontal">
-    {% csrf_token %}
-    {{ form|bootstrap_horizontal }}
-
-    <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <button class="btn btn-primary" type="submit"><i
-            class="fa fa-key"></i> {% trans "Change my password" %}</button>
-      </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button class="btn btn-primary" type="submit">
+        <i class="fa fa-key"></i> {% trans "Change my password" %}
+      </button>
     </div>
-  </form>
+  </div>
+</form>
 {% endblock %}
