--- a/gccsite/users/templates/users/as_staff_warning.html
+++ b/gccsite/users/templates/users/as_staff_warning.html
@@ -1,4 +1,6 @@
-{% load i18n %}
-{% if request.user != edited_user %}
-<p class="alert alert-warning">{% trans "Heads up! You are editing another user's information, as a staff member. Take extra care." %}</p>
+{% load i18n %} {% if request.user != edited_user %}
+<p class="alert alert-warning">
+  {% trans "Heads up! You are editing another user's information, as a staff
+  member. Take extra care." %}
+</p>
 {% endif %}
