--- a/gccsite/users/templates/users/mails/pswd_reset.subject.html
+++ b/gccsite/users/templates/users/mails/pswd_reset.subject.html
@@ -1,3 +1,1 @@
-{% load i18n %}
-
-{% trans "Your Prologin password reset request" %}
+{% load i18n %} {% trans "Your Prologin password reset request" %}
