--- a/gccsite/users/templates/users/password_reset.html
+++ b/gccsite/users/templates/users/password_reset.html
@@ -1,26 +1,22 @@
-{% extends "gcc/base.html" %}
-{% load i18n staticfiles %}
-{% load bootstrap django_bootstrap_breadcrumbs %}
+{% extends "gcc/base.html" %} {% load i18n staticfiles %} {% load bootstrap
+django_bootstrap_breadcrumbs %} {% block breadcrumbs %} {{ block.super }} {%
+breadcrumb_for "users:password_reset" %}{% trans "Password reset" %}{%
+endbreadcrumb_for %} {% endblock breadcrumbs %} {% block content %}
+<h1>{% trans "Password reset" %}</h1>
+<p>
+  {% trans "Forgotten your password? Enter your email address below, and we'll
+  email instructions for setting a new one." %}
+</p>
 
-{% block breadcrumbs %}
-  {{ block.super }}
-  {% breadcrumb_for "users:password_reset" %}{% trans "Password reset" %}{% endbreadcrumb_for %}
-{% endblock breadcrumbs %}
-
-{% block content %}
-  <h1>{% trans "Password reset" %}</h1>
-  <p>{% trans "Forgotten your password? Enter your email address below, and we'll email instructions for setting a new one." %}</p>
-
-  <form action="" method="POST" class="form-horizontal">
-    {% csrf_token %}
-    {{ form|bootstrap_horizontal }}
-    <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <button class="btn btn-primary" type="submit">
-          <i class="fa fa-key"></i> {% trans "Reset password" %}
-        </button>
-      </div>
+<form action="" method="POST" class="form-horizontal">
+  {% csrf_token %} {{ form|bootstrap_horizontal }}
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button class="btn btn-primary" type="submit">
+        <i class="fa fa-key"></i> {% trans "Reset password" %}
+      </button>
     </div>
-  </form>
+  </div>
+</form>
 
 {% endblock %}
